* Changes in mcclim-0.9.7 relative to 0.9.6:
** Housekeeping: clim-looks system has been renamed to mcclim/looks
** Improvement: Multiprocessing is now provided by the bordeaux-threads
** Housekeeping: Major system cleanup and directory reordering
** Housekeeping: Cleaning up chunks of code
** Housekeeping: Removed non-functional graphic-forms backend (Windows specific)
** Housekeeping: Moved core systems to the Core/ and substrates to Libraries/
** Improvements: Many! (given that the last release was in 2008 :-)

* Changes in mcclim-0.9.6 relative to 0.9.5:
** Bug fix: ESA's help commands are better at finding bindings and
   describing them
** Bug fix: Some missing methods and functions have been implemented
   for the Null backend, allowing headless operation for many
   applications.
** Specification compliance: READ-BITMAP-FILE and
   MAKE-PATTERN-FROM-BITMAP-FILE from CLIM 2.2. Includes new example
   program, IMAGE-VIEWER.
** Drei improvements
*** New redisplay engine that is faster and has more features.
*** Support for "views" concept.
*** Support for modes a la Emacs "mini-modes".
*** Bug fix: Input prompting now works for directly recursive calls to
    ACCEPT.
*** Improvement: Goal-columns for line movement.
*** Improvement: More Emacs-like expression movement for Lisp syntax.
** Bug fix: label panes no longer have a restrictive maximum width.
** Bug fix: ellipses with a zero radius no longer cause errors.
** Bug fix: bezier drawing in CLIM-FIG less likely to cause errors.
** Bug fix: restored somewhat working undo in CLIM-FIG.
** Specification compliance: The :inherit-menu keyword argument to
   DEFINE-COMMAND-TABLE and MAKE-COMMAND-TABLE is now implemented with
   CLIM 2.2 semantics. The :keystrokes value is not handled yet.
** Specification compliance: :PRINTER functions for MENU-CHOOSE are
   now called with the menu item, not the display object.
** Improvement: Faster drawing and AA text rendering. AA text requires