@@ -1,0 +1,4 @@
+
+(defsystem #:clim-layouts/tab
+  :depends-on (#:clim)
+  :components ((:file "tab-layout")))
