@@ -1,5 +1,6 @@
 * Changes in mcclim-0.9.7 relative to 0.9.6:
-** Housekeeping: clim-looks system has been renamed to mcclim/looks
+** Housekeeping: clim-looks system has been renamed to mcclim/looks     :api:
+** Housekeeping: tab-layout has it's own system now clim-layouts/tab    :api:
 ** Improvement: Multiprocessing is now provided by the bordeaux-threads
 ** Housekeeping: Major system cleanup and directory reordering
 ** Housekeeping: Cleaning up chunks of code
